add: first init

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>NEW SLIDER</title>
   </head>
   <body>
-    <div class="slider-container">
+    <div class="slider-container gestion">
       <div class="slider-loader"></div>
     </div>
   </body>
